WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50945
WebKit2: Web Inspector windows don't have titles
https://bugs.webkit.org/show_bug.cgi?id=50945
Summary
WebKit2: Web Inspector windows don't have titles
Brian Weinstein
Reported
2010-12-13 11:10:48 PST
In WebKit2, Web Inspector windows don't have titles. We need to listen to when the inspected URL has changed, and update the title through that.
Attachments
Proposed Change
(8.65 KB, patch)
2011-02-21 15:54 PST
,
Timothy Hatcher
aroben
: review+
timothy
: commit-queue-
Details
Formatted Diff
Diff
Proposed Change (with Qt and GTK fixed)
(10.32 KB, patch)
2011-02-21 16:05 PST
,
Timothy Hatcher
aroben
: review+
timothy
: commit-queue-
Details
Formatted Diff
Diff
Proposed Change (with Adam's feedback)
(10.30 KB, patch)
2011-02-21 16:19 PST
,
Timothy Hatcher
timothy
: review+
timothy
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2010-12-13 11:11:12 PST
<
rdar://problem/8762410
>
Timothy Hatcher
Comment 2
2011-02-21 15:54:07 PST
Created
attachment 83229
[details]
Proposed Change
Adam Roben (:aroben)
Comment 3
2011-02-21 15:57:10 PST
Comment on
attachment 83229
[details]
Proposed Change You might want to give the Windows and Qt EWS a chance to chew on this.
Timothy Hatcher
Comment 4
2011-02-21 16:05:17 PST
Created
attachment 83235
[details]
Proposed Change (with Qt and GTK fixed)
Adam Roben (:aroben)
Comment 5
2011-02-21 16:13:41 PST
Comment on
attachment 83235
[details]
Proposed Change (with Qt and GTK fixed) View in context:
https://bugs.webkit.org/attachment.cgi?id=83235&action=review
> Source/WebKit2/UIProcess/gtk/WebInspectorGtk.cpp:55 > +void WebInspectorProxy::platformInspectedURLChanged(const String& urlString)
Could remove the urlString name here.
> Source/WebKit2/UIProcess/qt/WebInspectorProxyQt.cpp:54 > +void WebInspectorProxy::platformInspectedURLChanged(const String& urlString)
And here.
> Source/WebKit2/UIProcess/win/WebInspectorProxyWin.cpp:191 > + ::SetWindowText(m_inspectorWindow, title.charactersWithNullTermination());
You should change this to call ::SetWindowTextW, to match other Win32 API usage in WebKit2. (::SetWindowText is just a macro for ::SetWindowTextW, so there's no behavioral difference.)
Timothy Hatcher
Comment 6
2011-02-21 16:17:34 PST
(In reply to
comment #5
)
> (From update of
attachment 83235
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=83235&action=review
> > > Source/WebKit2/UIProcess/gtk/WebInspectorGtk.cpp:55 > > +void WebInspectorProxy::platformInspectedURLChanged(const String& urlString) > > Could remove the urlString name here. > > > Source/WebKit2/UIProcess/qt/WebInspectorProxyQt.cpp:54 > > +void WebInspectorProxy::platformInspectedURLChanged(const String& urlString) > > And here. > > > Source/WebKit2/UIProcess/win/WebInspectorProxyWin.cpp:191 > > + ::SetWindowText(m_inspectorWindow, title.charactersWithNullTermination()); > > You should change this to call ::SetWindowTextW, to match other Win32 API usage in WebKit2. (::SetWindowText is just a macro for ::SetWindowTextW, so there's no behavioral difference.)
All done. Thanks!
Timothy Hatcher
Comment 7
2011-02-21 16:19:07 PST
Created
attachment 83237
[details]
Proposed Change (with Adam's feedback)
Timothy Hatcher
Comment 8
2011-02-21 17:44:29 PST
Fixed in
r79273
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug