Set and update the window title for the Web Inspector in WebKit2.

https://webkit.org/b/50945
rdar://problem/8762410

Reviewed by Adam Roben.

* UIProcess/WebInspectorProxy.cpp:
(WebKit::WebInspectorProxy::inspectedURLChanged): Added. Call platformInspectedURLChanged.
* UIProcess/WebInspectorProxy.h:
* UIProcess/WebInspectorProxy.messages.in: Added InspectedURLChanged.
* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::platformInspectedURLChanged): Added. Set the window title.
* UIProcess/win/WebInspectorProxyWin.cpp:
(WebKit::WebInspectorProxy::platformInspectedURLChanged): Added. Set the window title.
* UIProcess/gtk/WebInspectorGtk.cpp:
(WebKit::WebInspectorProxy::platformInspectedURLChanged): Added. Not implemented.
* UIProcess/qt/WebInspectorProxyQt.cpp:
(WebKit::WebInspectorProxy::platformInspectedURLChanged): Added. Not implemented.
* WebProcess/WebCoreSupport/WebInspectorFrontendClient.cpp:
(WebKit::WebInspectorFrontendClient::inspectedURLChanged): Call WebInspector::inspectedURLChanged.
* WebProcess/WebPage/WebInspector.cpp:
(WebKit::WebInspector::inspectedURLChanged): Added. Send the InspectedURLChanged message.
* WebProcess/WebPage/WebInspector.h:

Canonical link: https://commits.webkit.org/69196@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79273 268f45cc-cd09-0410-ab3c-d52691b4dbfc