Source/WebKit2/UIProcess/win/WebInspectorProxyWin.cpp
@@ -184,6 +184,13 @@ void WebInspectorProxy::platformClose()
     m_inspectorView = 0;
 }
 
+void WebInspectorProxy::platformInspectedURLChanged(const String& urlString)
+{
+    // FIXME: this should be made localizable once WebKit2 supports it. <rdar://problem/8728860>
+    String title = makeString("Web Inspector ", static_cast<UChar>(0x2014), ' ', urlString);
+    ::SetWindowTextW(m_inspectorWindow, title.charactersWithNullTermination());
+}
+
 String WebInspectorProxy::inspectorPageURL() const
 {
     RetainPtr<CFURLRef> htmlURLRef(AdoptCF, CFBundleCopyResourceURL(CFBundleGetBundleWithIdentifier(CFSTR("com.apple.WebKit")), CFSTR("inspector"), CFSTR("html"), CFSTR("inspector")));
